--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@types/node": "^20.2.5",
     "@types/validator": "^13.7.17",
     "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.6"
   },
   "dependencies": {
     "express": "^4.18.2",
