--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node dist/index.js",
-    "dev": "nodemon src/app.ts"
+    "dev": "nodemon src/main.ts"
   },
   "author": "",
   "license": "ISC",
